--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -8,7 +8,7 @@
 
     You can also add your credentials to an existing key, using these values:
 
-    Package name:
+    Package des:
     D9:CD:06:72:91:DC:96:55:AC:2B:5A:A7:C5:D7:0C:3B:95:09:8E:97
 
     SHA-1 certificate fingerprint:
