--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="safeStrokeColor">#a5d6a7</color>
+    <color name="safeFillColor">#33a5d6a7</color>
+    <color name="dangerStrokeColor">#ef9a9a</color>
+    <color name="dangerFillColor">#33ef9a9a</color>
 </resources>
