--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -56,13 +57,17 @@
             </android.support.design.widget.TextInputLayout>
 
 
-            <Button
+            <com.dd.processbutton.iml.ActionProcessButton
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
+                android:layout_height="40dp"
+                android:layout_marginTop="22dp"
+                app:pb_colorNormal="@color/buttonColor"
+                app:pb_colorPressed="@color/buttonColorDark"
+                app:pb_colorProgress="@color/colorPrimaryText"
+                android:text="Sign in"
+                android:textColor="@android:color/white"
                 android:textStyle="bold" />
 
         </LinearLayout>
