--- a/app/src/main/res/layout/activity_zones.xml
+++ b/app/src/main/res/layout/activity_zones.xml
@@ -26,6 +26,8 @@
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
+        app:fab_colorNormal="@color/buttonColor"
+        app:fab_colorPressed="@color/buttonColorDark"
         android:src="@drawable/ic_add_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
