--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#01579b</color>
+    <color name="colorPrimaryDark">#002f6c</color>
+    <color name="colorPrimaryLight">#4f83cc</color>
+    <color name="colorAccent">#009688</color>
+    <color name="colorPrimaryText">#212121</color>
+    <color name="colorSecondaryText">#757575</color>
     <color name="safeStrokeColor">#a5d6a7</color>
     <color name="safeFillColor">#33a5d6a7</color>
     <color name="dangerStrokeColor">#ef9a9a</color>
     <color name="dangerFillColor">#33ef9a9a</color>
+    <color name="buttonColor">#d32f2f</color>
+    <color name="buttonColorDark">#9a0007</color>
 </resources>
