--- a/app/src/main/res/layout/activity_add_zone.xml
+++ b/app/src/main/res/layout/activity_add_zone.xml
@@ -6,18 +6,50 @@
     android:layout_height="match_parent"
     android:weightSum="100"
     android:orientation="vertical"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
     tools:context="com.example.yinqinghao.childprotect.AddZoneActivity">
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/map_add_zone"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="66"></com.google.android.gms.maps.MapView>
+        android:layout_weight="66">
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map_add_zone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="66"></com.google.android.gms.maps.MapView>
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/transparent"
+            android:id="@+id/center_marker_tour"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="125dp" />
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/transparent"
+            android:layout_marginBottom="33dp"
+            android:layout_marginRight="38dp"
+            android:layout_marginEnd="38dp"
+            android:id="@+id/radius_marker_tour"
+            android:layout_alignBottom="@+id/center_marker_tour"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_weight="33"
         android:layout_height="0dp"
+        android:layout_margin="10dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:orientation="vertical">
@@ -29,14 +61,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-                android:textSize="20dp"
+                android:textSize="15dp"
+                android:textStyle="bold"
                 android:text="Zone Description:"/>
 
             <EditText
                 android:id="@+id/txt_zone_des"
                 android:layout_width="200dp"
                 android:layout_marginLeft="20dp"
-                android:layout_height="match_parent" />
+                android:maxLines="1"
+                android:minLines="1"
+                android:lines="1"
+                android:imeActionId="@+id/next"
+                android:layout_height="match_parent"
+                android:imeActionLabel="Next"
+                android:singleLine="true"
+                android:imeOptions="actionDone"/>
         </LinearLayout>
 
         <LinearLayout
@@ -47,7 +87,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-                android:textSize="20dp"
+                android:textSize="15dp"
+                android:textStyle="bold"
                 android:layout_gravity="center"
                 android:text="Zone Type:"/>
 
@@ -56,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkedButton="@+id/rb_safe_zone"
-                android:layout_marginLeft="66dp"
+                android:layout_marginLeft="46dp"
                 android:orientation="horizontal">
 
                 <RadioButton
@@ -113,5 +154,4 @@
         </LinearLayout>
 
     </LinearLayout>
-
 </LinearLayout>
