--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,11 @@
             android:id="@+id/nav_zones"
             android:icon="@drawable/ic_adjust_black_24dp"
             android:title="Geo fencing" />
+
+        <item
+            android:id="@+id/nav_routes"
+            android:icon="@drawable/ic_adjust_black_24dp"
+            android:title="Routes Geo fencing" />
     </group>
 
     <item android:title="Account">
