--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,21 +19,12 @@
             android:minHeight="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-        <!--<com.arlib.floatingsearchview.FloatingSearchView-->
-            <!--android:id="@+id/floating_search_view"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--app:floatingSearch_searchBarMarginLeft="5dp"-->
-            <!--app:floatingSearch_searchBarMarginTop="5dp"-->
-            <!--app:floatingSearch_searchBarMarginRight="5dp"-->
-            <!--app:floatingSearch_searchHint="Search..."-->
-            <!--app:floatingSearch_suggestionsListAnimDuration="250"-->
-            <!--app:floatingSearch_showSearchKey="false"-->
-            <!--app:floatingSearch_leftActionMode="showHamburger"-->
-            <!--app:floatingSearch_menu="@menu/main"-->
-            <!--app:floatingSearch_close_search_on_keyboard_dismiss="true"/>-->
+
+
+        </android.support.v7.widget.Toolbar>
+
 
         <FrameLayout
             android:id="@+id/content_frame"
