--- a/app/src/main/res/layout/activity_add_route.xml
+++ b/app/src/main/res/layout/activity_add_route.xml
@@ -67,29 +67,30 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                android:layout_gravity="center"
-                android:text="Mode:"/>
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"-->
+                <!--android:textSize="15dp"-->
+                <!--android:textStyle="bold"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:text="Mode:"/>-->
 
             <RadioGroup
                 android:id="@+id/radioGroup_route"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:checkedButton="@+id/rb_driving"
-                android:layout_marginLeft="10dp"
+                android:weightSum="100"
                 android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/rb_driving"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="25"
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/colorPrimary"
                     android:textSize="12dp"
@@ -98,7 +99,8 @@
 
                 <RadioButton
                     android:id="@+id/rb_walking"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="25"
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/colorPrimary"
                     android:textSize="12dp"
@@ -107,7 +109,8 @@
 
                 <RadioButton
                     android:id="@+id/rb_bicycling"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="25"
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/colorPrimary"
                     android:textSize="12dp"
@@ -116,7 +119,8 @@
 
                 <RadioButton
                     android:id="@+id/rb_transit"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="25"
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/colorPrimary"
                     android:textSize="12dp"
