--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
 
-    <item android:id="@+id/spinner"
-        yourapp:showAsAction="ifRoom"
-        yourapp:actionViewClass="android.widget.Spinner" />
+    <item android:id="@+id/sos"
+        android:title="SOS"
+        yourapp:showAsAction="always" />
 </menu>
