1. finish all iteration 2 functions

--- a/app/src/main/res/layout/grid_single.xml
+++ b/app/src/main/res/layout/grid_single.xml
@@ -8,7 +8,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_line_24dp">
+        android:src="@drawable/route">
     </ImageView>
 
     <TextView
