--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -25,14 +25,14 @@
         android:textColor="@android:color/white"
         android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/txt_speed"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="text"
-        android:gravity="center"
-        android:background="@color/backgroundColor"
-        android:textColor="@android:color/white" />
+    <!--<TextView-->
+        <!--android:id="@+id/txt_speed"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="text"-->
+        <!--android:gravity="center"-->
+        <!--android:background="@color/backgroundColor"-->
+        <!--android:textColor="@android:color/white" />-->
 
     <RelativeLayout
         android:layout_width="fill_parent"
