--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,8 @@
     <color name="buttonGreenDark">#087f23</color>
     <color name="splashColor">#79dfef</color>
     <color name="linkColor" >#0000EE</color>
+    <color name="actionbarOpacity">#33000000</color>
+    <color name="viewfinder_mask">#60000000</color>
+    <color name="viewfinder_laser">#ffcc0000</color>
+    <color name="viewfinder_border">#ffafed44</color>
 </resources>
