--- a/app/src/main/res/layout/activity_routes.xml
+++ b/app/src/main/res/layout/activity_routes.xml
@@ -15,6 +15,7 @@
         android:verticalSpacing="20dp"
         android:horizontalSpacing="20dp"
         android:stretchMode="columnWidth"
+        android:animateLayoutChanges="true"
         android:gravity="center"
         android:layout_margin="10dp"
         tools:layout_editor_absoluteY="10dp"
