--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,7 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
 
-    <item android:id="@+id/sos"
-        android:title="SOS"
-        yourapp:showAsAction="always" />
+    <item android:id="@+id/theme"
+        android:title="Change Maps Theme" />
 </menu>
